fix service blurb display issue on smaller screen sizes

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -168,6 +168,10 @@
     font-size: 2rem;
   }
 
+  .subtitle-sm {
+    font-size: 1.75rem;
+  }
+
   .body {
     font-size: 1.25rem;
   }
